--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,8 +4,6 @@
 
 <ul>
   <li><%= link_to "Edit", edit_article_path(@article) %></li>
-  <li><%= link_to "Destroy", article_path(@article), data: {
-    turbo_method: :delete,
-    turbo_confirm: "Are you sure?"
-  } %></li>
+  <%= button_to 'Edit', edit_article_path(@article), :method => :get %>
+  <%= button_to 'Delete post', @article, method: :delete, data: { confirm: 'Are you sure?' } %>
 </ul>
