--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,11 +1,49 @@
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+    .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+    .fa-anchor,.fa-coffee {font-size:200px}
+</style>
+
 <h1>Students</h1>
+<!-- Navigation -->
+<div class="w3-top">
+  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+  <h2 style="color: white" >Search For Student</h2>
+  <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+  <%= form_tag(search_path, method: :get, class: "w3-bar-item") do %>
+    <%= text_field_tag(:search, params[:seach]) %>
+    <%= submit_tag("Search") %>
+  <% end %>
+  </div>
+</div>
 
-<h2>Search For Student</h2>
+<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+  <h1 style="color: white" class="w3-margin w3-jumbo">Create A New Student</h1>
+  <%= button_to 'New Student', new_student_path(@student), :method => :get, class:"w3-button w3-black w3-padding-large w3-large w3-margin-top" %>
+</header>
 
-<%= form_tag(search_path, method: :get) do %>
-  <%= text_field_tag(:search, params[:seach]) %>
-  <%= submit_tag("Search") %>
-<% end %>
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+    </div>
+
+    <div class="w3-twothird">
+      <h1>Lorem Ipsum</h1>
+      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+  </div>
+</div>
 
 <ul>
   <% @students.each do |student| %>
@@ -18,3 +56,4 @@
 </ul>
 
 <%= link_to "New Student", new_student_path %>
+</header>
